--- a/IntranetEpitech2/app/src/main/AndroidManifest.xml
+++ b/IntranetEpitech2/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.epitech.intra.intranetepitech" >
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -9,7 +11,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MenuActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".ProfilActivity"
@@ -24,8 +26,21 @@
             android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".PlanningActivity"
+            android:label="@string/title_activity_planning" >
+        </activity>
+        <activity
+            android:name=".TokenActivity"
+            android:label="@string/title_activity_token" >
+        </activity>
+        <activity
+            android:name=".GradeActivity"
+            android:label="@string/title_activity_grade" >
         </activity>
     </application>
 
