--- a/IntranetEpitech2/app/src/main/AndroidManifest.xml
+++ b/IntranetEpitech2/app/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
             android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -41,6 +40,10 @@
         <activity
             android:name=".GradeActivity"
             android:label="@string/title_activity_grade" >
+        </activity>
+        <activity
+            android:name=".ModuleDetail"
+            android:label="@string/title_activity_module_detail" >
         </activity>
     </application>
 
